<resources>
    <string name="app_name">SQLiteDataBase</string>
    <string name="contacts">Contacts</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone_no">Enter Your Phone No</string>
    <string name="view">Search</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="id">id</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No</string>
</resources>
