<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow

        >
        <TextView
            android:id="@+id/t1"
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
        android:layout_weight="1"
            android:id="@+id/t2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/name"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="1"
            android:text="@string/phone_no"
            android:id="@+id/t3"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <Button
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/update"
            android:background="@drawable/ic_refresh_button"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <Button
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/delete"
            android:background="@drawable/ic_rubbish_bin"
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </TableRow>

    

    

    

</TableLayout>